# chip-8

./: Cargo.toml  README.md
emulator/src/: lib.rs  opcode.rs
frontend/: Cargo.toml  index.html  index.js
frontend/src/: lib.rs
src/: main.rs  opcode.rs
