[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chip8 = { path = "../emulator" }
wasm-bindgen = "0.2.89"

[dependencies.web-sys]
version = "*"
features = [ "CanvasRenderingContext2d", "Document", "Element", "HtmlCanvasElement", "ImageData", "KeyboardEvent", "Window"]

[lib]
crate-type = ["cdylib"]
